3.2.3

TODO: Mac OS 64bit support


3.2.2

- changed auto jitter buffer property to reduce audio drop outs

- bug fix: mechanism to keep port in NAT of slave server open works now correctly

- bug fix: slave server unregistering may not be successful


3.2.1

- support for audio device selection under Mac OS

- connect dialog list is sorted by the ping time

- software icon changed

- bug fix: fixed distorted audio with USB sound cards on Mac OS

- bug fix: fixed crash on slave server unregistering


3.2.0

- new GUI style of the main window, added switch for selecting the GUI style
  in the settings window

- a list of available servers is shown on pressing the connect button, the list
  is managed by a central server, any private server is added automatically if
  the registering setting is enabled

- the jitter buffer size can be independently set for client and server

- improved auto jitter buffer algorithm

- the Qt project file is now used for Linux, too

- ini-file is stored in the home directory instead of the application directory

- added server settings in the GUI for the server list and added ini file
  support to store the settings

- bug fix: fixed Jack audio interface instability


3.1.2

- show warning in main window if audio delay is too long

- added download link in help menu

- bug fix: solo switch did not work correctly


3.1.1

- added stereo audio channel support

- added input/output audio channel mapping for ASIO audio interface


3.1.0

- support for MacOS (using CoreAudio audio interface)

- sound card frame size support for frame sizes other than 128, 256 and 512
  samples

- improvement of network buffer (jitter buffer) in case of small buffer sizes

- all available ASIO sample formats supported

- bug fix for M-Audio Delta ASIO driver


3.0.3

- accessibility improvements

- show number of connected clients in window title (and therefore in OS task
  bar)

- added "Whats this" help text to the GUI controls in the general settings